--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <h4>Susan Ngatia</h4>
                 <div><p>___</p></div>
                 <p><span>Project Manager</span></p>
-                <p><span>Data Analyticist</span></p>
+                <p><span>Data Analyst</span></p>
                 </div>
             <nav class="main-nav" role="navigation">
               <ul class="main-menu">
