--- a/readmore.html
+++ b/readmore.html
@@ -41,7 +41,7 @@
                 <h4>Susan Ngatia</h4>
                 <div class="line-dec">___</div>
                 <p><span>Project Manager</span></p>
-                <p><span>Data Analyticist</span></p>
+                <p><span>Data Analyst</span></p>
                 </div>
             <div class="social-network">
               <ul class="soial-icons">
