--- a/index.html
+++ b/index.html
@@ -46,26 +46,22 @@
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
                 <li><a href="#section2">What I’m good at</a></li>
-                <li><a href="#section3">My Work</a></li>
                 <li><a href="#section4">Contact Me</a></li>
               </ul>
             </nav>
             <div class="social-network">
               <ul class="soial-icons">
                 <li>
-                  <a href="linkedin.com/in/michaelkiruti"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://linkedin.com/in/susan-ngatia"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://github.com/Kiruti01"><i class="fa-brands fa-github"></i></a>
+                  <a href="https://github.com/SusanNgatia"><i class="fa-brands fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/the_lordmikey"><i class="fa fa-twitter"></i></a>
+                  <a href="https://twitter.com/SusanNgatia6"><i class="fa fa-twitter"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/lordmikeyofficial/"><i class="fa fa-instagram"></i></a>
-                </li>
-                <li>
-                  <a href="https://vimeo.com/michaelkiruti"><i class="fa fa-vimeo" aria-hidden="true"></i></a>
+                  <a href="https://www.instagram.com/ngatiasuzzie"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -97,14 +93,27 @@
                   <h4>Bio</h4>
                   <div class="line-dec"></div>
                   <p>
-                    🎥🌟 Susan Wambui Ngatia is a versatile creative professional with an unwavering passion for transforming ideas into captivating digital realities.
-                    With a journey spanning over 7 dynamic years in the animation industry, 3 years as a proficient back-end engineer specializing in Python, 
-                    and a burgeoning expertise as an AWS cloud engineer, Michael is dedicated to pushing the boundaries of digital innovation.
+                    🎥🌟 Susan Wambui Ngatia is a project manager in Nairobi, Kenya. She is passionate 
+                    about making the world a better place by ensuring that sectors in government such as 
+                    infrastructure are of good quality and enhance efficiency. This includes good roads, 
+                    safe building construction and use of good quality raw materials and resources. 
                   </p>
-                  
-                  <div class="white-button">
-                    <a href="readmore.html">Read More</a>
-                  </div>
+                  <p>Currently studying Data Analytics at ALX.</p>
+                  <p>
+                    She has worked with different organizations and companies such as World Food Programme 
+                    as a research assistant, enumerator and data analyst, Ivolve Company Limited as a project 
+                    manager in a construction site and Cinch Survey as a data collector and organizer.
+                  </p> 
+                  <p>
+                    She currently works for Bosco Contractors and Engineers Limited as the project lead. 
+                    She has a certification in PRINCE 2 which is Projects In Controlled Environments that 
+                    enables her work in gated communities and restricted areas. 
+                  </p>
+                  <p>
+                    She graduated as the top female in her class with a Bachelor of Science degree in Project Management 
+                    from the Jomo Kenyatta University of Agriculture and Technology. She aspires to bring change in the 
+                    world by ensuring that the sustainable development growths in infrastructure are embraced in the world and are effective.
+                  </p>
                 </div>
               </div>
             </div>
@@ -125,14 +134,14 @@
         <div class="row">
           <div class="col-md-6">
             <div class="service-item">
-              <a href="assets/360 LIFE PITCH VIDEO PPT.pdf"><img src="assets/images/1.jpg" alt="" /></a>
-              <h4><a href="assets/360 LIFE PITCH VIDEO PPT.pdf">Slide Decks(pdf)</a></h4>
+              <a href="assets/HEKIMA SLIDE DECK.pptx.pdf"><img src="assets/images/HEKIMA SLIDE DECK.pptx.jpg" alt="" /></a>
+              <h4><a href="assets/HEKIMA SLIDE DECK.pptx.pdf">Slide Decks(pdf)</a></h4>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <a href="https://youtu.be/nnIJXKx-qxg"><img src="assets/images/video.jpg" alt="" /></a>
-              <h4><a href="https://youtu.be/nnIJXKx-qxg">Team Project Video</a></h4>
+              <a href="https://youtu.be/hQKEJmZ96cU"><img src="assets/images/hekima vid.jpg" alt="" /></a>
+              <h4><a href="https://youtu.be/hQKEJmZ96cU">Team Project Video</a></h4>
             </div>
           </div>
         </div>
@@ -155,12 +164,29 @@
           <div class="section-heading">
             <h2>What I’m good at?</h2>
             <div class="line-dec"></div>
-            <span
-              >🚀🌟 With a dynamic skill set encompassing Python programming, 
-              AWS cloud expertise, front-end, and back-end development, 
-              as well as a flair for art and animation, I 
-              excel in crafting seamless digital experiences that marry technology and creativity.</span
-            >
+            <div class="text-left">
+              <p>
+                🚀🌟 With a versatile skill set spanning various domains, I have honed my abilities in a multitude of disciplines, consistently pushing boundaries to deliver excellence.
+                From the serene depths of the pool to the spotlight on the stage, I've embraced my love for swimming, singing, and acting, honing my talents over the years. 
+                These pursuits have taught me discipline, creativity, and the importance of performing under pressure.
+              </p>
+
+              <p>
+                🍳🎨 Guiding a team towards success is second nature to me. I've consistently demonstrated strong leadership qualities, enabling me to steer groups toward their goals while 
+                fostering a collaborative and motivated environment. Armed with a bachelor's degree in project management, I possess a solid foundation to oversee tasks from inception to completion. 
+                My academic journey equipped me with essential skills to organize, plan, and execute projects with precision.
+              </p>
+              <p>
+                🏗️ With a background in construction companies, I've gained hands-on experience in the dynamic world of construction. This exposure has enhanced my ability to navigate complex 
+                challenges and deliver results with efficiency. Whether it's cooking up a hearty meal or creating delectable baked goods, I bring the same dedication and flair to my cooking 
+                as I do to my work. Beyond the kitchen, my passion for the culinary arts reflects my commitment to innovation and creativity. Adept at both data analysis and enumeration, 
+                I am captivated by the world of numbers and patterns. My skills in this area contribute to informed decision-making and strategic insights.
+              </p>
+              <p>
+                🌐 In crafting seamless digital experiences that unite technology and creativity, I bridge the gap between form and function. With a dynamic skill set encompassing a range of talents, 
+                I am primed to tackle new challenges and create impactful digital narratives
+              </p>
+          </div>
           </div>
         </div>
       </section>
