--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             <div class="social-network">
               <ul class="soial-icons">
                 <li>
-                  <a href="https://linkedin.com/in/susan-ngatia"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://linkedin.com/in/susan-ngatia" target="_blank"><i class="fa fa-linkedin"></i></a>
                 </li>
                 <li>
-                  <a href="https://github.com/SusanNgatia"><i class="fa-brands fa-github"></i></a>
+                  <a href="https://github.com/SusanNgatia" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/SusanNgatia6"><i class="fa fa-twitter"></i></a>
+                  <a href="https://twitter.com/SusanNgatia6" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 </li>
                 <li>
-                  <a href="https://www.instagram.com/ngatiasuzzie"><i class="fa fa-instagram"></i></a>
+                  <a href="https://www.instagram.com/ngatiasuzzie" target="_blank"><i class="fa fa-instagram"></i></a>
                 </li>
               </ul>
             </div>
