--- a/index.html
+++ b/index.html
@@ -93,26 +93,22 @@
                   <h4>Bio</h4>
                   <div class="line-dec"></div>
                   <p>
-                    🎥🌟 Susan Wambui Ngatia is a project manager in Nairobi, Kenya. She is passionate 
-                    about making the world a better place by ensuring that sectors in government such as 
-                    infrastructure are of good quality and enhance efficiency. This includes good roads, 
-                    safe building construction and use of good quality raw materials and resources. 
+                    🎥🌟 Susan Wambui Ngatia, a Nairobi-based project manager in Kenya, is dedicated to 
+                    improving global conditions by ensuring government sectors, especially infrastructure, 
+                    maintain high quality and efficiency. Her focus spans aspects like robust road networks, 
+                    secure building practices, and optimal use of resources. Presently, she's pursuing studies in Data Analytics at ALX.
                   </p>
-                  <p>Currently studying Data Analytics at ALX.</p>
                   <p>
-                    She has worked with different organizations and companies such as World Food Programme 
-                    as a research assistant, enumerator and data analyst, Ivolve Company Limited as a project 
-                    manager in a construction site and Cinch Survey as a data collector and organizer.
+                    Susan's professional journey includes roles with diverse organizations. She worked with 
+                    the World Food Programme as a research assistant, enumerator, and data analyst. 
+                    At Ivolve Company Limited, she managed construction projects, and at Cinch Survey, 
+                    she collected and organized data. Currently, she leads projects at Bosco Contractors 
+                    and Engineers Limited, holding PRINCE2 certification that qualifies her for work in controlled environments.
                   </p> 
                   <p>
-                    She currently works for Bosco Contractors and Engineers Limited as the project lead. 
-                    She has a certification in PRINCE 2 which is Projects In Controlled Environments that 
-                    enables her work in gated communities and restricted areas. 
-                  </p>
-                  <p>
-                    She graduated as the top female in her class with a Bachelor of Science degree in Project Management 
-                    from the Jomo Kenyatta University of Agriculture and Technology. She aspires to bring change in the 
-                    world by ensuring that the sustainable development growths in infrastructure are embraced in the world and are effective.
+                    She excelled academically, graduating as the top female student in her class with a Bachelor of Science in 
+                    Project Management from Jomo Kenyatta University of Agriculture and Technology. Susan's ambition centers on 
+                    promoting sustainable development in global infrastructure for meaningful positive change.
                   </p>
                 </div>
               </div>
