--- a/index.html
+++ b/index.html
@@ -196,6 +196,22 @@
           <div class="text-center">
             <h2>Email: susanngatia6@gmail.com</h2>
           </div>
+          <div class="social-network">
+              <ul class="soial-icons">
+                <li>
+                  <a href="https://linkedin.com/in/susan-ngatia" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="https://github.com/SusanNgatia" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/SusanNgatia6" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="https://www.instagram.com/ngatiasuzzie" target="_blank"><i class="fa fa-instagram"></i></a>
+                </li>
+              </ul>
+            </div>
       </section>
     </div>
 
