--- a/elevator.html
+++ b/elevator.html
@@ -21,18 +21,112 @@
     <link rel="stylesheet" href="assets/css/templatemo-style.css" />
     <link rel="stylesheet" href="assets/css/owl.css" />
     <link rel="stylesheet" href="assets/css/lightbox.css" />
+    <style>
+        /* Add a custom style to center the video container */
+        .video-container {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Elevator Pitch Comming Soon!</h1>
-    <section class="section about-me" data-section="section1">
-        <div class="container">
-            <div class="section-heading">
-                <span
-                >Hello, I'm Susan Wambui Ngatia.</span
-                >
+    <div id="page-wraper">
+        <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
             </div>
+            <div class="author-content">
+                <h4><a href="index.html">Susan Ngatia</a></h4>
+              <div class="line-dec">___</div>
+              <p><span>Project Manager</span></p>
+              <p><span>Data Analyst</span></p>
+            </div>
+          </div>
         </div>
-      </section>
+      </div>
+        <section class="section about-me" data-section="section1">
+            <div class="container">
+                <div class="section-heading">
+                    <h2>Elevator Pitch</h2>
+                    <div class="line-dec"></div>
+                </div>
+            </div>
+            <div class="video-container" style="max-width: 800px; margin: 0 auto;">
+<!--               <iframe
+                width="100%"
+                height="400"
+                src="https://www.youtube.com/embed/(youtube ID)"
+                frameborder="0"
+                allowfullscreen
+              ></iframe> -->
+            </div>
+                <div class="copyright-text video-container" >
+                  <p>©Susan Ngatia, 2023</p>
+                </div>
+          </section>
+    </div>
+        <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
     
 </body>
 </html>
