--- a/elevator.html
+++ b/elevator.html
@@ -40,9 +40,9 @@
             </div>
             <div class="author-content">
                 <h4><a href="index.html">Susan Ngatia</a></h4>
-              <div class="line-dec">___</div>
-              <p><span>Project Manager</span></p>
-              <p><span>Data Analyst</span></p>
+                <div><p>___</p></div>
+                <p><span>Project Manager</span></p>
+                <p><span>Data Analyst</span></p>
             </div>
           </div>
         </div>
