--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@
         <div class="row">
           <div class="col-md-6">
             <div class="service-item">
+              <a href="elevator.html"><img src="assets/images/untitled.jpg" alt=""></a>
               <div class="text-center">
-                <a href="elevator.html"><h3>Elevator Pitch</h3></a>
+                <a href="elevator.html"><h4>Elevator Pitch</h4></a>
               </div>
             </div>
           </div>
