--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
         <div class="row">
           <div class="col-md-6">
             <div class="service-item">
-              <a href="assets/HEKIMA SLIDE DECK.pptx.pdf"><img src="assets/images/HEKIMA SLIDE DECK.pptx.jpg" alt="" /></a>
-              <h4><a href="assets/HEKIMA SLIDE DECK.pptx.pdf">Slide Decks(pdf)</a></h4>
+              <a href="assets/HEKIMA SLIDE DECK.pptx.pdf" target="_blank"><img src="assets/images/HEKIMA SLIDE DECK.pptx.jpg" alt="" /></a>
+              <h4><a href="assets/HEKIMA SLIDE DECK.pptx.pdf" target="_blank">Slide Decks(pdf)</a></h4>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <a href="https://youtu.be/hQKEJmZ96cU"><img src="assets/images/hekima vid.jpg" alt="" /></a>
-              <h4><a href="https://youtu.be/hQKEJmZ96cU">Team Project Video</a></h4>
+              <a href="https://youtu.be/hQKEJmZ96cU" target="_blank"><img src="assets/images/hekima vid.jpg" alt="" /></a>
+              <h4><a href="https://youtu.be/hQKEJmZ96cU" target="_blank">Team Project Video</a></h4>
             </div>
           </div>
         </div>
@@ -147,9 +147,9 @@
         <div class="row">
           <div class="col-md-6">
             <div class="service-item">
-              <a href="elevator.html"><img src="assets/images/untitled.jpg" alt=""></a>
+              <a href="elevator.html" target="_blank"><img src="assets/images/untitled.jpg" alt=""></a>
               <div class="text-center">
-                <a href="elevator.html"><h4>Elevator Pitch</h4></a>
+                <a href="elevator.html" target="_blank"><h4>Elevator Pitch</h4></a>
               </div>
             </div>
           </div>
