--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
           
           <div class="col-md-6">
             <div class="service-item">
-              <a href=""><img src="assets/images/md.jpg" alt="" /></a>
+              <a href="https://youtu.be/BzWhcVUblNk" target="_blank"><img src="assets/images/md.jpg" alt="" /></a>
               <h4><a href="">Maji Ndogo</a></h4>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
-              <a href="https://youtu.be/hQKEJmZ96cU"><img src="assets/images/md2.jpg" alt="" /></a>
+              <a href="https://youtu.be/xirNUoqeLTo" target="_blank"><img src="assets/images/md2.jpg" alt="" /></a>
               <h4><a href="">Water Services</a></h4>
             </div>
           </div>
