--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/images/a-i-suz.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/a-i-suz.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/7d2559c882.js" crossorigin="anonymous"></script>
 
     <title>Susan</title>
