--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
               <h4><a href="">Water Services</a></h4>
             </div>
           </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <a href="assets/AVPA Visualization.pdf" target="_blank"></a>
+              <h4><a href="">AVPA Visualization </a></h4>
+            </div>
+          </div>
         </div>
       </section>
 
