--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
           <div class="col-md-6">
             <div class="service-item">
               <a href="assets/AVPA Visualization.pdf" target="_blank"></a>
-              <h4><a href="assets/AVPA Visualization.pdf">AVPA Visualization </a></h4>
+              <h4><a href="assets/AVPA Visualization.pdf">AVPA Power BI Visualization </a></h4>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
               <a href="assets/Maji Ndogo Powerbi Project.pdf" target="_blank"></a>
-              <h4><a href="assets/Maji Ndogo Powerbi Project.pdf">Maji Ndogo PowerBi Visualization </a></h4>
+              <h4><a href="assets/Maji Ndogo Powerbi Project.pdf">Maji Ndogo Power BI Visualization </a></h4>
             </div>
           </div>
         </div>
